--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "start-server-and-test": "^2.0.0",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
+    "vite-plugin-pwa": "^0.17.2",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
   }
